<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".ui.InformationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/left_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:visibility="visible"
                    tools:visibility="invisible"
                    android:src="@drawable/ic_arrowback"/>
                <TextView
                    android:id="@+id/textClasse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:text="@string/name_app"
                    style="@style/text"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    />
                <ImageView
                    android:id="@+id/right_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_menu"/>

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>



    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="15dp"
                android:text="@string/descrition"
                android:textStyle="bold"
                style="@style/description_drawable"
                android:drawablePadding="5dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/textDescrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="15dp"
                android:text="@string/symptons"
                android:textStyle="bold"
                style="@style/symptons_drawable"
                android:drawablePadding="5dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/textSymptons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/text"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="15dp"
                android:text="@string/treatment"
                style="@style/treatment_drawable"
                android:drawablePadding="5dp"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/textTreatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/text"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textCM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text=" "
                style="@style/text"
                android:textStyle="bold"
                android:textSize="24sp"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>