<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_color">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/left_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:visibility="visible"
                        tools:visibility="invisible"
                        android:src="@drawable/ic_arrowback"/>
                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:text="DermDetect"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/left_icon"
                        />
                    <ImageView
                        android:id="@+id/right_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_menu"/>

                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/textInformaçao"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:layout_marginStart="8dp"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
        <LinearLayout
            android:id="@+id/linearimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textInformaçao"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/selectedimage"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:src="@drawable/ic_imageempty"
                android:layout_gravity="center_horizontal"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="left"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="30dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textViewInformations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Informações>"
                    android:textStyle="italic"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="30dp"
                    android:visibility="visible"
                    tools:visibility="invisible"
                    android:layout_gravity="right"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearimage"
            tools:ignore="NotSibling">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgBtnCamera"
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/bg_button"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />


                <ImageButton
                    android:id="@+id/imgBtnGaleria"
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/bg_button"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_galeria"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginStart="60dp"
                    android:text="@string/camera"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints,RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginEnd="64dp"
                    android:text="@string/gallery"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints,RtlHardcoded" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/buttonEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/infer"
                android:textSize="19sp"
                android:textAllCaps="false"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                tools:visibility="visible" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>